// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`visible column breakpoints duplicate generated locations 1`] = `
Array [
  Object {
    "condition": undefined,
    "enabled": true,
    "location": Object {
      "column": 1,
      "line": 1,
    },
  },
  Object {
    "condition": null,
    "enabled": false,
    "location": Object {
      "column": 3,
      "line": 1,
    },
  },
]
`;

exports[`visible column breakpoints ignores single breakpoints 1`] = `
Array [
  Object {
    "condition": undefined,
    "enabled": true,
    "location": Object {
      "column": 1,
      "line": 1,
    },
  },
  Object {
    "condition": null,
    "enabled": false,
    "location": Object {
      "column": 3,
      "line": 1,
    },
  },
]
`;

exports[`visible column breakpoints only shows visible breakpoints 1`] = `
Array [
  Object {
    "condition": undefined,
    "enabled": true,
    "location": Object {
      "column": 1,
      "line": 1,
    },
  },
  Object {
    "condition": null,
    "enabled": false,
    "location": Object {
      "column": 3,
      "line": 1,
    },
  },
]
`;

exports[`visible column breakpoints simple 1`] = `
Array [
  Object {
    "condition": undefined,
    "enabled": true,
    "location": Object {
      "column": 1,
      "line": 1,
    },
  },
  Object {
    "condition": null,
    "enabled": false,
    "location": Object {
      "column": 5,
      "line": 1,
    },
  },
]
`;
